Changes in version 1.2.1

o UPDATE: `edit` function added within the `correct.changes` function to allow more seamless interface

o UPDATE: change tracking has been added to `correct.changes` in the output (`$spellcheck$changes`)


Changes in version 1.2.0

o **MAJOR UPDATE**: overhauled `textcleaner` and `correct.changes` system to be more functionally efficient, convenient, and aesthetically intuitive

o ADD: a walkthrough has been added prior to the manual spell-check in `textcleaner`

o ADD: a help option has been added to `textcleaner`

o UPDATE: error catching added to `textcleaner` and `correct.changes` so not all is lost (data up to error will be saved and returned)

o MOVE: `equate` and `finalize` moved from SemNetCleaner to SemNeT

o UPDATE: moved many miscellaneous functions to internals to clean up package presentation

o UPDATE: cleaned up textcleaner code to be more streamlined and readable

o REMOVE: lead.word data was removed because the `rm.lead.space` function was moved to internals


Changes in version 1.1.5

o FIX: `read.data` bug for .csv files

o FIX: NA bug in `textcleaner`

o ADD: `resp2bin` converts response matrix to binary response matrix

o FIX: naming output in `equate` function

o FIX: `pluralize` handling of words ending in 'ion'


Changes in version 1.1.4

o diacritic characters bug fux in `qwerty.dist`

o temporary bug fix in `correct.changes` (see code)

o removed progress bar for Macs and Linux -- will work on progress bar solution at a later time

o fixed diacritic character error for Macs


Changes in version 1.1.3

o fixed fatal bug in `correct.changes`


Changes in version 1.1.2

o updates to documentation

o fixed obnoxious message bug in `textcleaner` function

o changed progress bar in `spell.check.dictionary` to display words done out of words in total (rather than percentage)

o updated citation (PsyArXiv)

o added vignettes for preprocessing and estimating semantic networks


Changes in version 1.1.1
